[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/BaseKinematicSelectable.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/KinematicSelectable.gd" type="Script" id=2]
[ext_resource path="res://test_sprites.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 25.0

[sub_resource type="CircleShape2D" id=2]
radius = 30.1195

[node name="KinematicSelectable" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="0"]
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 33, 0, 15, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]
position = Vector2( -4.2, 5.2 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectHitbox" index="0"]
position = Vector2( -4.2, 5.2 )
shape = SubResource( 2 )
