[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Scripts/KinematicSelectable.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/enemies_and_objects.png" type="Texture" id=2]
[ext_resource path="res://src/Scenes/SelectEffect.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 22.5444

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.0
height = 10.0

[node name="Object" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 63
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -13.2 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1, 1, 13, 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -9.0042 )
shape = SubResource( 1 )

[node name="SelectHitbox" type="Area2D" parent="."]
position = Vector2( 0, -13.2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectHitbox"]
shape = SubResource( 2 )

[node name="SelectEffect" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -15.3846 )
